# gtk4_layoutmanager_transformation

./: README.md  github.aeldemery.gtk4_layoutmanager_transformation.json  meson.build
data/: github.aeldemery.gtk4_layoutmanager_transformation.appdata.xml.in  github.aeldemery.gtk4_layoutmanager_transformation.desktop.in  github.aeldemery.gtk4_layoutmanager_transformation.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: GlobeTransformationLayout.vala  GlobeWidget.vala  Main.vala  MainWindow.vala  MathHelper.vala  gtk4_layoutmanager_transformation.gresource.xml  meson.build
subprojects/MathHelper/: MathHelper.vapi  four_point_transform.c  math_helper.h  meson.build  singular_value_decomposition.c
